# liblogax

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: main.yml
_sources/docs/: logging_levels.md.txt  logging_with_logaxlogger.md.txt  logging_without_logaxlogger.md.txt  modularity.md.txt  output_formats.md.txt
_static/css/: fandango.css
docs/: Doxyfile  callbacks.html  conf.py  index.html  index.md  index.rst  logging_levels.html  logging_with_logaxlogger.html  logging_without_logaxlogger.html  modularity.html  options.html  output_formats.html
docs/_static/css/: liblogax.css
docs/docs/: callbacks.md  index.md  logging_levels.md  logging_with_logaxlogger.md  logging_without_logaxlogger.md  modularity.md  options.md  output_formats.md
docs/how_it_works/: index.md
how_it_works/: index.html
include/exotic/: logax.h
reference/: _r_e_a_d_m_e_8md.html  annotated.html  classes.html  dir_87ca12e6a78269c9869212930533a16e.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_type.html  graph_legend.html  index.html  logax_8h.html  logax_8h__incl.dot  logax_8h_source.html  menudata.js  structlogax__logger__s-members.html  structlogax__logger__s.html
reference/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js
reference/xml/: _r_e_a_d_m_e_8md.xml  dir_87ca12e6a78269c9869212930533a16e.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  indexpage.xml  logax_8h.xml  structlogax__logger__s.xml
test/: CMakeLists.txt  crash_test.c  empty_c_file.c  test_basics.c  test_init_logax.c  test_loggers_functional.c  test_no_callback.c  test_no_coloring.c  test_no_logax_logger_output_stream.c  test_no_output_stream.c  test_no_time.c  test_old_console_mode_windows.c  test_write_json_format_to_stream.c  test_write_key_value_format_to_stream.c  test_write_plaintext_format_to_stream.c  test_write_text_format_to_stream.c
